# FASM

./: .gitignore  BYTECODE.md  Cargo.toml  FASM.md  README.md  benchmark.ps1  build_errors.txt  c.txt  d.txt  err.txt
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: generate_report.sh  run_benchmarks.sh
benchmarks/competitors/: http_bench_client.js  node_http_server.js  python_http_server.py
benchmarks/reports/: latest_raw.json  latest_report.md  perf-2026-04-08-jit.md  perf-2026-04-08.md
crates/fasm-bytecode/: Cargo.toml  README.md
crates/fasm-bytecode/src/: encode.rs  instruction.rs  lib.rs  opcode.rs  program.rs  types.rs
crates/fasm-cli/: Cargo.toml  README.md
crates/fasm-cli/src/: main.rs
crates/fasm-compiler/: Cargo.toml  README.md
crates/fasm-compiler/src/: ast.rs  emitter.rs  lexer.rs  lib.rs  parser.rs  token.rs  validator.rs
crates/fasm-compiler/tests/: compiler_tests.rs
crates/fasm-engine/: Cargo.toml  README.md
crates/fasm-engine/benches/: engine_bench.rs  realworld_bench.rs
crates/fasm-engine/src/: config.rs  dispatcher.rs  engine.rs  http_handler.rs  lib.rs  main.rs  metrics.rs  persistent_handler.rs  pubsub.rs  queue_looper.rs  queues.rs  router.rs  scheduler.rs
crates/fasm-engine/src/admin/: apps.rs  auth.rs  files.rs  mod.rs  namespace.rs  registry.rs  routes.rs
crates/fasm-engine/tests/: engine_integration_test.rs  load_test.rs
crates/fasm-engine/tests/common/: mod.rs
crates/fasm-engine/tests/fixtures/: arithmetic.fasm  echo.fasm  fib_handler.fasm  ping.fasm  string_ops.fasm  struct_ops.fasm
crates/fasm-jit/: Cargo.toml
crates/fasm-jit/src/: analyze.rs  codegen.rs  lib.rs
crates/fasm-jit/tests/: bench_compare.rs
crates/fasm-sandbox/: Cargo.toml  README.md
crates/fasm-sandbox/src/: clock.rs  landlock.rs  lib.rs  plugin_manifest.rs  sandbox.rs  seccomp.rs  sidecar.rs
crates/fasm-sandbox/tests/: jailbreak_tests.rs
crates/fasm-vm/: Cargo.toml  README.md
crates/fasm-vm/src/: executor.rs  fault.rs  lib.rs  memory.rs  value.rs
docs/design/: pseudo_types.md
examples/: README.md  bench_sidecar.fasm  bitset_bitvec_demo.fasm  calculator.c  calculator.fasm  calculator.js  calculator.py  deque_demo.fasm  fib_bridge.fasm  fib_sidecar.py  fibbench.c  fibbench.js  fibbench.py  fibonacci.fasm  fibonacci.fasmc  fibsingle.c  my_plugin.py  ping.py  sidecar.fasm  sparse_btree_demo.fasm  tco_test.fasm  tmp_block_demo.fasm  tmp_block_invalid_jmp_demo.fasm  vec_ops_demo.fasm
examples/faas_demo/: engine.toml  queue_worker.fasm
examples/faas_demo/api/: orders.fasm  users.fasm
examples/faas_demo/plugins/: db.plugin.toml  db_query.py
examples/faas_demo/tasks/: cleanup.fasm
tools/: disasm.rs
