[package]
name    = "fasm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fasm-engine"
path = "src/main.rs"

[lib]
name = "fasm_engine"
path = "src/lib.rs"

[[bench]]
name    = "engine_bench"
harness = false

[[bench]]
name    = "realworld_bench"
harness = false

[dependencies]
fasm-bytecode  = { path = "../fasm-bytecode" }
fasm-compiler  = { path = "../fasm-compiler" }
fasm-vm        = { path = "../fasm-vm" }
fasm-jit       = { path = "../fasm-jit" }
fasm-sandbox   = { path = "../fasm-sandbox" }

tokio          = { version = "1", features = ["full"] }
axum           = { version = "0.7", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
clap           = { version = "4", features = ["derive"] }
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["v4", "serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2         = "1"
base64         = "0.22"

[dev-dependencies]
fasm-jit   = { path = "../fasm-jit" }
reqwest    = { version = "0.12", features = ["json", "blocking"] }
criterion  = { version = "0.5", features = ["async_tokio"] }
sysinfo    = "0.33"
tempfile   = "3"
futures    = "0.3"
