[package]
name = "fasm-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
fasm-bytecode = { path = "../fasm-bytecode" }
fasm-vm       = { path = "../fasm-vm" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
landlock    = "0.4"
libc        = "0.2"
